X3 C++ PluginFramework

------v1.0.9------

2011-06-02, Li Jian (Aaron) <mcuit@hotmail.com>, Zhang Yun Gui

    * Add makefile for Linux.

2011-05-26

    * Add example projects: HollowView and HollowViewApp.
    * Fix Cx_PluginLoader::LoadPluginFiles.

2011-05-24

    * Disable copy operators. Replace std::w2a to x3::w2a.
    * Implement configxml plugin using tinyxml (not completed).
    * Change portability functions for Linux and Windows.
    * Not call InterlockedCompareExchange in Cx_SingletonObject.

2011-05-18

    * Implement portability for Linux.
    * tags/x3c-1.0.8-beforelinux: Ready to implement portability.
    * Move VC++ project files to 'projects\msvc'.
    * Change CodeBlocks projects to Linux. Add portimpl.h and linuximpl.h

2011-05-12

    * ConfigXml: Output error info when saving file.

2011-04-29

    * FileUtility: Using CopyFileW for coping small file on Win7 instead of calling SHFileOperationW.
    * LogWriter: Not call CopyLogFilesToServer() when error occurred by default.
    * Add a test case for Ix_FileUtility.

------v1.0.8------

2011-02-28

    * FileUtility: Add FOF_SILENT flag for SHFileOperationW.
    * LogManager: Avoid reenter in WriteLog.
    * LogWriter: Hide progress UI in CopyLogFilesToServer.
    * LogHelper.h: Rename the variable 'buf' to '_buf'.

2011-02-24

    * Set modified flag only if actually changed in Cx_XmlSection::SetXXX().
    * Check NULL string in Cx_ConfigXml::GetSection().

    * LogWriter: Copy log files to server if error message has fired.

2011-02-21

    * Replace "\n" to "\\n " in LogWriter plugin. Add replace function in ctrim.h

------v1.0.7------

2011-02-18

    * Add delay-load comments.
    * Fix Cx_PluginLoader::LoadPluginOrDelay.
    * Not call CoUninitialize if another plugin (eg. StringTable) is using ConfigXml plugin.

2011-02-16

    * Fix PluginManager:
        Avoid plugin loading when a plugin is unloading.
        Counting even a plugin is not loaded in InitializePlugins.