@@ -14,6 +14,7 @@
 		<string id="IDS_LOADXMLSTR_FAIL" value="不是正确格式的XML内容，解析XML失败"/>
 		<string id="IDS_SAVEXML_OK" value="保存XML文件成功"/>
 		<string id="IDS_SAVEXML_FAIL" value="保存XML文件失败"/>
+		<string id="IDS_CHANGE_FAIL" value="修改XML内容失败"/>
 	</module>
 	<module name="ConfigDB">
 		<string id="IDS_CREATEINSTANCE_FAIL" value="不能创建数据库连接COM对象"/>
